// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-textarea #render error should render component as expected 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error gux-show" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea aria-describedby="gux-form-field-error-i" aria-invalid="true" id="gux-form-field-input-i" name="textarea" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render help should render component as expected 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" name="textarea" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render indicator marks should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render indicator marks should render component as expected (2) 1`] = `
<gux-form-field-textarea indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render indicator marks should render component as expected (3) 1`] = `
<gux-form-field-textarea indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea disabled="" id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" required="" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-info should render component as expected 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea aria-describedby="gux-label-info-beta-i" id="gux-form-field-input-i" name="textarea" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (2) 1`] = `
<gux-form-field-textarea label-position="above">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (3) 1`] = `
<gux-form-field-textarea label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (4) 1`] = `
<gux-form-field-textarea label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (1) 1`] = `
<gux-form-field-textarea>
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (2) 1`] = `
<gux-form-field-textarea resize="auto">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-auto" data-replicated-value="undefined">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (3) 1`] = `
<gux-form-field-textarea resize="manual">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-manual">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (4) 1`] = `
<gux-form-field-textarea resize="none">
  <template shadowrootmode="open">
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-resize-none">
          <slot name="input"></slot>
        </div>
        <div aria-live="assertive" class="gux-form-field-error" role="alert">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid" size="small"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </template><textarea id="gux-form-field-input-i" slot="input"></textarea>
  <label for="gux-form-field-input-i" slot="label">
    Label
  </label>
</gux-form-field-textarea>
`;
